<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.android.twozerofoureightapp.MainScreen">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="244dp"
        android:layout_height="71dp"
        android:fontFamily="@font/montserrat_subrayada"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="57.99dp"
        android:layout_height="20.06dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/rounded_corner_1"
        android:fontFamily="@font/knewave"
        android:rotation="-6.16"
        android:text="@string/small_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView1" />

    <ImageView
        android:id="@+id/Image"
        android:layout_width="311dp"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:src="@drawable/image_18"
        android:contentDescription="@string/game_name"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/get_started"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>