<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/first_game"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gamecard"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/k2d_extrabold"
            android:text="@string/game_name"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/first_game_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/description_2048" />

        <ImageView
            android:id="@+id/first_game_image"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/game_name"
            android:src="@drawable/background_2048" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/first_game_start_btn"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:background="@drawable/get_started"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:text="@string/play"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
